--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,11 +11,17 @@ setw -g aggressive-resize on
 setw -g monitor-activity on
 setw -g mode-keys vi
 
-#switch panels
+#switch panes
 bind k selectp -U # switch to panel Up
 bind j selectp -D # switch to panel Down 
 bind h selectp -L # switch to panel Left
 bind l selectp -R # switch to panel Right
+
+#resize panes
+bind-key C-h resize-pane -L 10
+bind-key C-l resize-pane -R 10
+bind-key C-j resize-pane -D 10
+bind-key C-k resize-pane -U 10
 
 set -g pane-border-fg cyan
 set -g default-terminal "screen-256color"
