Clipper because copy-paste is good

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,5 +41,6 @@ unbind m
 bind m paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
+bind -t vi-copy Enter copy-pipe "nc localhost 8377"
 bind -t vi-copy 'Space' halfpage-down
 bind -t vi-copy 'Bspace' halfpage-up
