--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set -g base-index 1
 set -g pane-base-index 1
+set -g prefix C-a
 
 set-option -g status-utf8 on
 set-option -g status-bg black
@@ -39,6 +40,7 @@ bind Escape copy-mode
 unbind m
 bind m paste-buffer
 bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind -t vi-copy 'y' copy-pipe "nc localhost 8377"
+bind -t vi-copy Enter copy-pipe "nc localhost 8377"
 bind -t vi-copy 'Space' halfpage-down
 bind -t vi-copy 'Bspace' halfpage-up
