added pane joining and sending to/from windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,10 @@ bind-key C-l resize-pane -R 5
 bind-key C-j resize-pane -D 5
 bind-key C-k resize-pane -U 5
 
+#join panes
+bind-key j command-prompt -p "join pane from:" "join-pane -s :'%%'"
+bind-key s command-prompt -p "send pane to:" "join-pane -t :'%%'"
+
 set -g pane-border-fg cyan
 set -g default-terminal "screen-256color"
 set -g pane-active-border-fg blue
@@ -40,7 +44,7 @@ bind Escape copy-mode
 unbind m
 bind m paste-buffer
 bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind -t vi-copy 'y' copy-pipe "nc localhost 8377"
 bind -t vi-copy Enter copy-pipe "nc localhost 8377"
 bind -t vi-copy 'Space' halfpage-down
 bind -t vi-copy 'Bspace' halfpage-up
