--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ bind-key C-j resize-pane -D 5
 bind-key C-k resize-pane -U 5
 
 #join panes
-bind-key j command-prompt -p "join pane from:" "join-pane -s :'%%'"
+bind-key g command-prompt -p "join pane from:" "join-pane -s :'%%'"
 bind-key s command-prompt -p "send pane to:" "join-pane -t :'%%'"
 
 set -g pane-border-fg cyan
