--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ bind-key C-k resize-pane -U 5
 bind-key g command-prompt -p "join pane from:" "join-pane -s :'%%'"
 bind-key s command-prompt -p "send pane to:" "join-pane -t :'%%'"
 
-set -g pane-border-fg cyan
+set -g pane-border-fg blue
 set -g default-terminal "screen-256color"
 set -g pane-active-border-fg blue
 set -g visual-activity on
