--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set -g prefix C-a
 
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 set-option -g status-bg black
 set-option -g status-fg white
 
@@ -36,15 +36,21 @@ set -g status-left ''
 setw -g window-status-format '#[bg=cyan]#[fg=black] #I #[bg=black]#[fg=white] #W '
 setw -g window-status-current-format '#[bg=blue]#[fg=white] #I #[bg=black]#[fg=cyan] #W '
 
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# setw -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-select-window on
 
 bind Escape copy-mode
 unbind m
 bind m paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-pipe "nc localhost 8377"
-bind -t vi-copy Enter copy-pipe "nc localhost 8377"
-bind -t vi-copy 'Space' halfpage-down
-bind -t vi-copy 'Bspace' halfpage-up
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-pipe "nc localhost 8377"
+# bind -t vi-copy Enter copy-pipe "nc localhost 8377"
+# bind -t vi-copy 'Space' halfpage-down
+# bind -t vi-copy 'Bspace' halfpage-up
+
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-vim 'session'
+run -b '~/.tmux/plugins/tpm/tpm'
