--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,9 +28,9 @@ bind-key C-k resize-pane -U 5
 bind-key g command-prompt -p "join pane from:" "join-pane -s :'%%'"
 bind-key s command-prompt -p "send pane to:" "join-pane -t :'%%'"
 
-set -g pane-border-fg blue
+set -g pane-border-style "fg=blue"
+set -g pane-active-border "fg=blue"
 set -g default-terminal "screen-256color"
-set -g pane-active-border-fg blue
 set -g visual-activity on
 set -g status-left ''
 setw -g window-status-format '#[bg=cyan]#[fg=black] #I #[bg=black]#[fg=white] #W '
